
  - estimation with `method = 'MHRM'` now requires and explicity `SE=TRUE`
  call to compute the information matrix. The matrix is now computed using
  the ML estimates rather than approximated sequentially after each iteration
  (very unstable), and therefore a seperate stage is performed. This provides
  much better accuracy in the computations

NEW FEATURES

  - return the SRMSR statistic in `M2()` along with the residual matrix
  (suggested by Dave Flora)

  - accept `Etable` default input in `customPriorFun` (suggested by Alexander
  Robitzsch)

  - vignette files for the package examples are now hosted on Github and
  can be accessed by following the link mentioned in the vignette location
  in the index or `?mirt` helpfile

  - E-step is now computed in parallel (if available) following a
  `mirtCluster()` definition

  - run no M-step optimizations by passing `TOL = NaN`. Useful to have
  the model converge instantly with all parameters exactly equal to the
  starting values

  - confidence envelope plots in `itemplot()` generate shaded regions instead
  of dotted lines, and confidence interval plots added to `plot()` generic
  through the `MI` input

  - passes to `fscores()` slightly more optimized for upcoming mirtCAT
  package release

  - `method = 'EAPsum'` argument to `fscores()` support for multidimensional
  models

BUG FIXES

  - fix forcing all SEs MHRM information matrix computations to be positive

  - `imputeMissing()` crash fix for multiple-group models

  - fix divide-by-0 bug in the E-step when number of items is large

  - fix crash in EM estimation with `SE.type = 'MHRM'`

Changes in mirt 1.4

MAJOR CHANGES

  - calculating the information matrix for exploratory item factor analysis
  models has been disabled since the rotational indeterminacy of the model
  results in improper parameter variation

  - changed default `theta_lim` to `c(-6,6)` and number of quadrature defaults
  increased as well
