@@ -13,6 +13,9 @@ MAJOR CHANGES
 
 NEW FEATURES
 
+  - new `extract.group()` function to extract a single group object from an
+  objects previously returned by `multipleGroup()`
+
   - return the SRMSR statistic in `M2()` along with the residual matrix
   (suggested by Dave Flora)
 
